# aiba

./: Cargo.toml
core/: Cargo.toml
core/src/: lib.rs
core/src/event/: mod.rs
core/src/event/handlers/: broadcaster_live.rs  mod.rs
core/src/model/: twitch.rs
server/: Cargo.toml
server/src/: main.rs
server/src/api/: mod.rs
server/src/api/debug/: mod.rs
server/src/api/middleware/: default_headers_middleware.rs  mod.rs
