[package]
name = "aiba_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aiba_core = { path = "../core" }
actix-web = "^4"
async-trait = "^0.1"
http = "^0.2"
url = "2.2.2"
futures-util = "^0.3"
log = "^0.4"
tracing = "^0.1"
tracing-subscriber = "^0.2"
tracing-log = "^0.1"
tokio = { version = "^1.19", features = ['full', 'tracing'] }
ctrlc = "3.2.3"